--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "antd": "^3.19.5",
+    "dayjs": "^1.9.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.11.0"
   },
   "devDependencies": {
+    "@umijs/preset-react": "^1.5.19",
     "babel-eslint": "^9.0.0",
     "eslint": "^5.4.0",
     "eslint-config-umi": "^1.4.0",
@@ -25,8 +27,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
     "react-test-renderer": "^16.7.0",
-    "umi": "^3.2.10",
-    "@umijs/preset-react": "^1.5.19"
+    "umi": "^3.2.10"
   },
   "lint-staged": {
     "*.{js,jsx}": [
