--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "project-libs": "^1.1.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-awesome-swiper": "^1.4.16",
     "react-dom": "^16.8.6",
     "react-icons": "^3.11.0"
   },
