--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "antd": "^3.19.5",
     "dayjs": "^1.9.3",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "project-libs": "^1.1.3",
     "prop-types": "^15.7.2",
     "rc-form": "^2.4.11",
